--- a/settings.json
+++ b/settings.json
@@ -4,26 +4,25 @@
  */
 {
   //Ip and port which etherpad should bind at
-  "ip": "127.0.0.1",
+  "ip": "0.0.0.0",
   "port" : 9001,
   
-  //The Type of the database. You can choose between dirty, sqlite and mysql
-  //You should use mysql or sqlite for anything else than testing or development
-  //"dbType" : "dirty",
+  "dbType" : "dirty",
   //the database specific settings
-  /*"dbSettings" : {
-                   "filename" : "var/mongo.db"
-                 },*/
-                 
+  "dbSettings" : {
+                   "filename" : "var/dirty.db"
+                 },
+
+  // The Type of the database. You can choose between dirty, sqlite and mysql
   // An Example of MySQL Configuration
-   "dbType" : "mongodb",
+  /* "dbType" : "mongodb",
    "dbSettings" : {
                     "user" : "cohoop",
                     "host" : "ds035517.mongolab.com",
                     "port" : 35517,
                     "password": "C0h00pR0ck5",
                     "dbname": "heroku_app5638817"
-                  },
+                  },*/
   
   //the default text of a pad
   "defaultPadText" : "Welcome to Etherpad Lite!\n\nThis pad text is synchronized as you type, so that everyone viewing this page sees the same text. This allows you to collaborate seamlessly on documents!\n\nEtherpad Lite on Github: http:\/\/j.mp/ep-lite\n",
