--- a/src/package.json
+++ b/src/package.json
@@ -24,7 +24,6 @@
                       "formidable"          : "1.0.9",
                       "log4js"              : "0.4.1",
                       "jsdom-nocontextifiy" : "0.2.10",
-                      "async-stacktrace"    : "0.0.2",
                       "npm"                 : "1.1.24",
                       "ejs"                 : "0.6.1",
                       "graceful-fs"         : "1.1.5",
@@ -32,9 +31,10 @@
                       "semver"              : "1.0.13",
                       "underscore"          : "1.3.1"
                      },
-  "bin":             { "etherpad-lite": "./node/server.js" },
+  "bin":             { "etherpad-lite": "./node_module/ep_etherpad-lite/node/server.js" },
   "devDependencies": {
-                      "jshint"  : "*"
+                      "jshint"  : "*",
+                      "async-stacktrace"    : "0.0.2"
                      },
   "engines"        : { "node" : ">=0.8.0",
                        "npm"  : ">=1.0"
