--- a/src/package.json
+++ b/src/package.json
@@ -18,7 +18,7 @@
                       "ueberDB"             : "0.1.7",
                       "async"               : "0.1.18",
                       "express"             : "2.5.x",
-                      "connect"             : "1.8.7",
+                      "connect"             : "1.8.x",
                       "clean-css"           : "0.3.2",
                       "uglify-js"           : "1.2.5",
                       "formidable"          : "1.0.9",
