--- a/src/package.json
+++ b/src/package.json
@@ -18,7 +18,7 @@
                       "ueberDB"             : "0.1.7",
                       "async"               : "0.1.18",
                       "express"             : "2.5.x",
-                      "connect"             : "1.1.x",
+                      "connect"             : "2.3.6",
                       "async-stacktrace"    : "0.0.2",
                       "clean-css"           : "0.3.2",
                       "uglify-js"           : "1.2.5",
