--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 node_modules
+src
 settings.json
 APIKEY.txt
 bin/abiword.exe
@@ -12,3 +13,4 @@ src/static/js/jquery.js
 npm-debug.log
 *.DS_Store
 .ep_initialized
+
