--- a/src/package.json
+++ b/src/package.json
@@ -5,16 +5,18 @@
   "keywords"       : ["etherpad", "realtime", "collaborative", "editor"],
   "author"         : "Peter 'Pita' Martischka <petermartischka@googlemail.com> - Primary Technology Ltd",
   "contributors"   : [
-                      { "name": "John McLear", 
+                      {
+                        "name": "John McLear",
                         "name": "Hans Pinckaers",
-                        "name": "Robin Buse" }
+                        "name": "Robin Buse"
+                      }
                      ],
   "dependencies"   : {
                       "yajsml"              : "1.1.3",
                       "request"             : "2.9.100",
                       "require-kernel"      : "1.0.5",
-                      "resolve"             : "0.2.x",
-                      "socket.io"           : "0.9.x",
+                      "resolve"             : "0.2.1",
+                      "socket.io"           : "0.9.6",
                       "ueberDB"             : "0.1.7",
                       "async"               : "0.1.x",
                       "express"             : "2.5.x",
@@ -30,7 +32,8 @@
                       "graceful-fs"         : "1.1.5",
                       "slide"               : "1.1.3",
                       "semver"              : "1.0.13",
-                      "underscore"          : "1.3.1"
+                      "underscore"          : "1.3.1",
+                          "mongodb"             : "x"
                      },
   "bin":             { "etherpad-lite": "./node/server.js" },
   "devDependencies": {
@@ -38,6 +41,6 @@
                      },
   "engines"        : { "node" : ">=0.6.0",
                        "npm"  : ">=1.0"
-                     }, 
+                     },
   "version"        : "1.0.0"
 }
