--- a/settings.json
+++ b/settings.json
@@ -34,13 +34,13 @@
                   },*/
  
   //the default text of a pad
-  "defaultPadText" : "Welcome on CoHoop Community",
+  "defaultPadText" : "Welcome to your Hoop!",
  
   /* Users must have a session to access pads. This effectively allows only group pads to be accessed. */
-  "requireSession" : true,
+  "requireSession" : false,
 
   /* Users may edit pads but not create new ones. Pad creation is only via the API. This applies both to group pads and regular pads. */
-  "editOnly" : true,
+  "editOnly" : false,
  
   /* if true, all css & js will be minified before sending to the client. This will improve the loading performance massivly,
      but makes it impossible to debug the javascript/css */
